<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">
  <ImageView android:layout_width="261dp"
             android:layout_height="45dp"
             android:src="@drawable/avengerslogo"
             android:layout_centerHorizontal="true"
             android:id="@+id/img_logo"

             android:layout_marginTop="15dp" android:layout_marginLeft="15dp" android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp" android:layout_marginRight="15dp" android:layout_marginBottom="15dp"/>
  <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/login_number"
          android:layout_below="@+id/img_logo"
          android:hint="@string/phone_number"
          android:inputType="number"
          android:maxLines="1"
          android:maxLength="10"
          android:layout_marginRight="15dp"
          android:layout_marginLeft="15dp"
          android:layout_marginTop="20dp"
          android:padding="6dp"

  />
  <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/password"
          android:layout_below="@+id/login_number"
          android:hint="@string/password"
          android:inputType="textPassword"
          android:maxLines="1"
          android:maxLength="10"
          android:padding="6dp"
          android:layout_marginRight="15dp"
          android:layout_marginLeft="15dp"
          android:layout_marginTop="20dp"

  />
  <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/LoginString"
          android:layout_below="@+id/password"
          android:layout_marginTop="20dp"
          android:layout_marginLeft="15dp"
          android:layout_marginRight="15dp"
          android:textSize="16sp"
          android:textStyle="bold"
          android:textColor="#ffffff"
          android:background="@color/colorAccent"
          android:padding="6dp"
          android:id="@+id/bottonLogin"

  />
  <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/bottonLogin"
          android:text="@string/forget_password"
          android:layout_marginTop="20dp"
          android:layout_centerHorizontal="true"
          android:textSize="16sp"
          android:id="@+id/ForgetPassword"

  />
  <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/register_yourself"
          android:textSize="16sp"
          android:layout_centerHorizontal="true"
          android:layout_alignParentBottom="true"
          android:layout_marginBottom="20dp"
          android:id="@+id/RegiterYourself"

  />
</RelativeLayout>